// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users view list view renders initially warning if filters are mandatory 1`] = `
<div>
  <main class="oc-flex oc-height-1-1 app-content oc-width-1-1">
    <div class="oc-width-expand oc-height-1-1 oc-position-relative" id="admin-settings-wrapper">
      <div class="oc-app-bar oc-py-s" id="admin-settings-app-bar">
        <div class="admin-settings-app-bar-controls oc-flex oc-flex-between oc-flex-middle">
          <oc-breadcrumb-stub class="oc-flex oc-flex-middle" contextmenupadding="medium" id="admin-settings-breadcrumb" items="[object Object],[object Object]" maxwidth="-1" showcontextactions="false" truncationoffset="2" variation="default"></oc-breadcrumb-stub>
          <portal-target name="app.runtime.mobile.nav"></portal-target>
          <div class="oc-flex">
            <view-options-stub hasfileextensions="false" hashiddenfiles="false" haspagination="true" paginationoptions="20,50,100,250" perpagedefault="50" perpagequeryname="items-per-page" perpagestorageprefix="admin-settings" viewmodedefault="resource-table" viewmodes=""></view-options-stub>
          </div>
        </div>
        <div class="admin-settings-app-bar-actions oc-flex oc-flex-middle oc-mt-xs">
          <div>
            <oc-button-stub appearance="filled" class="oc-mr-s" disabled="false" gapsize="medium" id="create-user-btn" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="primary"></oc-button-stub>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div>
        <div class="" id="user-list">
          <div class="user-filters oc-flex oc-flex-between oc-flex-wrap oc-flex-bottom oc-mx-m oc-mb-m">
            <div class="oc-flex oc-flex-middle">
              <div class="oc-mr-m oc-flex oc-flex-middle">
                <span class="oc-icon oc-icon-m oc-icon-passive oc-mr-xs">
                  <!---->
                </span>
                <span>Filter:</span>
              </div>
              <item-filter-stub allowmultiple="true" class="oc-mr-s" closeonclick="false" displaynameattribute="displayName" filterableattributes="displayName" filterlabel="Groups" filtername="groups" idattribute="id" items="undefined" optionfilterlabel="Filter groups" showoptionfilter="true"></item-filter-stub>
              <item-filter-stub allowmultiple="true" closeonclick="false" displaynameattribute="displayName" filterableattributes="displayName" filterlabel="Roles" filtername="roles" idattribute="id" items="undefined" optionfilterlabel="Filter roles" showoptionfilter="true"></item-filter-stub>
            </div>
            <div class="oc-flex oc-flex-middle">
              <div class="">
                <label class="oc-label" for="users-filter">Search</label>
                <div class="oc-position-relative">
                  <!--v-if-->
                  <input aria-invalid="false" autocomplete="off" class="oc-text-input oc-input oc-rounded" id="users-filter" modelmodifiers="[object Object]" type="text">
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
              <oc-button-stub appearance="raw" class="oc-ml-xs" disabled="false" gapsize="medium" id="users-filter-confirm" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
            </div>
          </div>
          <no-content-message-stub icon="error-warning" iconfilltype="fill"></no-content-message-stub>
        </div>
      </div>
    </div>
    <!--v-if-->
  </main>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Users view list view renders list initially 1`] = `
<div>
  <main class="oc-flex oc-height-1-1 app-content oc-width-1-1">
    <div class="oc-width-expand oc-height-1-1 oc-position-relative" id="admin-settings-wrapper">
      <div class="oc-app-bar oc-py-s" id="admin-settings-app-bar">
        <div class="admin-settings-app-bar-controls oc-flex oc-flex-between oc-flex-middle">
          <oc-breadcrumb-stub class="oc-flex oc-flex-middle" contextmenupadding="medium" id="admin-settings-breadcrumb" items="[object Object],[object Object]" maxwidth="-1" showcontextactions="false" truncationoffset="2" variation="default"></oc-breadcrumb-stub>
          <portal-target name="app.runtime.mobile.nav"></portal-target>
          <div class="oc-flex">
            <view-options-stub hasfileextensions="false" hashiddenfiles="false" haspagination="true" paginationoptions="20,50,100,250" perpagedefault="50" perpagequeryname="items-per-page" perpagestorageprefix="admin-settings" viewmodedefault="resource-table" viewmodes=""></view-options-stub>
          </div>
        </div>
        <div class="admin-settings-app-bar-actions oc-flex oc-flex-middle oc-mt-xs">
          <div>
            <oc-button-stub appearance="filled" class="oc-mr-s" disabled="false" gapsize="medium" id="create-user-btn" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="primary"></oc-button-stub>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div>
        <div class="" id="user-list">
          <div class="user-filters oc-flex oc-flex-between oc-flex-wrap oc-flex-bottom oc-mx-m oc-mb-m">
            <div class="oc-flex oc-flex-middle">
              <div class="oc-mr-m oc-flex oc-flex-middle">
                <span class="oc-icon oc-icon-m oc-icon-passive oc-mr-xs">
                  <!---->
                </span>
                <span>Filter:</span>
              </div>
              <item-filter-stub allowmultiple="true" class="oc-mr-s" closeonclick="false" displaynameattribute="displayName" filterableattributes="displayName" filterlabel="Groups" filtername="groups" idattribute="id" items="undefined" optionfilterlabel="Filter groups" showoptionfilter="true"></item-filter-stub>
              <item-filter-stub allowmultiple="true" closeonclick="false" displaynameattribute="displayName" filterableattributes="displayName" filterlabel="Roles" filtername="roles" idattribute="id" items="undefined" optionfilterlabel="Filter roles" showoptionfilter="true"></item-filter-stub>
            </div>
            <div class="oc-flex oc-flex-middle">
              <div class="">
                <label class="oc-label" for="users-filter">Search</label>
                <div class="oc-position-relative">
                  <!--v-if-->
                  <input aria-invalid="false" autocomplete="off" class="oc-text-input oc-input oc-rounded" id="users-filter" modelmodifiers="[object Object]" type="text">
                  <!--v-if-->
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
              <oc-button-stub appearance="raw" class="oc-ml-xs" disabled="false" gapsize="medium" id="users-filter-confirm" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
            </div>
          </div>
          <table class="oc-table oc-table-hover oc-table-sticky has-item-context-menu users-table">
            <thead class="oc-thead">
              <tr class="oc-table-header-row" tabindex="-1">
                <th class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-shrink oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-select oc-pl-s" style="top: 0px;">
                  <span class="oc-table-thead-content">
                    <span class="oc-ml-s">
                      <input class="oc-checkbox oc-rounded oc-checkbox-l" id="oc-checkbox-1" name="checkbox" type="checkbox">
                      <label class="oc-invisible-sr oc-cursor-pointer" for="oc-checkbox-1">Select all users</label>
                    </span>
                  </span>
                  <!--v-if-->
                </th>
                <th class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-shrink oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-avatar" style="top: 0px;">
                  <span class="oc-table-thead-content header-text"></span>
                  <!--v-if-->
                </th>
                <th aria-sort="ascending" class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-onPremisesSamAccountName" style="top: 0px;">
                  <span class="oc-table-thead-content header-text">User name</span>
                  <oc-button-stub appearance="raw" arialabel="Sort by onPremisesSamAccountName" class="oc-button-sort" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                </th>
                <th aria-sort="none" class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-displayName" style="top: 0px;">
                  <span class="oc-table-thead-content header-text">First and last name</span>
                  <oc-button-stub appearance="raw" arialabel="Sort by displayName" class="oc-invisible-sr oc-button-sort" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                </th>
                <th aria-sort="none" class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-mail" style="top: 0px;">
                  <span class="oc-table-thead-content header-text">Email</span>
                  <oc-button-stub appearance="raw" arialabel="Sort by mail" class="oc-invisible-sr oc-button-sort" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                </th>
                <th aria-sort="none" class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-role" style="top: 0px;">
                  <span class="oc-table-thead-content header-text">Role</span>
                  <oc-button-stub appearance="raw" arialabel="Sort by role" class="oc-invisible-sr oc-button-sort" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                </th>
                <th aria-sort="none" class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-accountEnabled" style="top: 0px;">
                  <span class="oc-table-thead-content header-text">Login</span>
                  <oc-button-stub appearance="raw" arialabel="Sort by accountEnabled" class="oc-invisible-sr oc-button-sort" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                </th>
                <th class="oc-table-cell oc-table-cell-align-right oc-table-cell-align-middle oc-table-cell-width-auto oc-text-nowrap oc-th oc-table-header-cell oc-table-header-cell-actions oc-pr-s" style="top: 0px;">
                  <span class="oc-table-thead-content header-text">Actions</span>
                  <!--v-if-->
                </th>
              </tr>
            </thead>
            <tbody class="has-item-context-menu">
              <tr class="oc-tbody-tr oc-tbody-tr-1" data-item-id="1" draggable="false" tabindex="-1">
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-shrink oc-td oc-table-data-cell oc-table-data-cell-select oc-pl-s">
                  <span class="oc-ml-s">
                    <input class="oc-checkbox oc-rounded oc-checkbox-l" id="oc-checkbox-2" name="checkbox" type="checkbox" value="undefined">
                    <label class="oc-invisible-sr oc-cursor-pointer" for="oc-checkbox-2">Select Admin</label>
                  </span>
                </td>
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-shrink oc-td oc-table-data-cell oc-table-data-cell-avatar">
                  <avatar-image user-name="Admin" userid="1" width="32"></avatar-image>
                </td>
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-td oc-table-data-cell oc-table-data-cell-onPremisesSamAccountName">function () {
                  return fn.apply(this, arguments);
                  }</td>
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-td oc-table-data-cell oc-table-data-cell-displayName mark-element">Admin</td>
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-td oc-table-data-cell oc-table-data-cell-mail">admin@example.org</td>
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-td oc-table-data-cell oc-table-data-cell-role">Admin</td>
                <td class="oc-table-cell oc-table-cell-align-left oc-table-cell-align-middle oc-table-cell-width-auto oc-td oc-table-data-cell oc-table-data-cell-accountEnabled">
                  <span class="oc-flex oc-flex-middle">
                    <span class="oc-icon oc-icon-m oc-icon-passive oc-mr-s">
                      <!---->
                    </span>
                    <span>Allowed</span>
                  </span>
                </td>
                <td class="oc-table-cell oc-table-cell-align-right oc-table-cell-align-middle oc-table-cell-width-auto oc-td oc-table-data-cell oc-table-data-cell-actions oc-pr-s">
                  <oc-button-stub appearance="raw" class="oc-mr-xs quick-action-button oc-p-xs users-table-btn-details" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                  <oc-button-stub appearance="raw" class="oc-mr-xs quick-action-button oc-p-xs users-table-btn-edit" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                  <oc-button-stub appearance="raw" arialabel="Show context menu" class="users-table-btn-action-dropdown" disabled="false" gapsize="medium" id="context-menu-trigger-1" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" variation="passive"></oc-button-stub>
                </td>
              </tr>
            </tbody>
            <tfoot class="oc-table-footer">
              <tr class="oc-table-footer-row">
                <td class="oc-table-footer-cell" colspan="8">
                  <!-- @slot Footer of the table -->
                  <!--v-if-->
                  <div class="oc-text-nowrap oc-text-center oc-width-1-1 oc-my-s">
                    <p class="oc-text-muted">1 users in total</p>
                  </div>
                </td>
              </tr>
            </tfoot>
            <!--v-if-->
          </table>
        </div>
      </div>
    </div>
    <!--v-if-->
  </main>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;
